--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -1,5 +1,8 @@
 $primary-color: rgb(246, 248, 243);
 $border-color: #ccc;
-$hover-border-color: black;
+$hover-border-color: rgb(24, 24, 24);
 
-$primary-font: 'Playfair Display';
+$opacity-black: rgba(0, 0, 0, 0.20);
+$hover-opacity-black:  rgba(0, 0, 0, 0.45);
+
+$primary-font: 'Roboto';
