--- a/client/src/pages/signin.scss
+++ b/client/src/pages/signin.scss
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: $primary-color;
   //TODO
   height: 50vh;
 }
