--- a/client/src/pages/signup.scss
+++ b/client/src/pages/signup.scss
@@ -8,6 +8,8 @@
   align-items: center;
   //TODO
   height: 80vh; 
+  background-color: $primary-color;
+
 }
 
 .signup-form { 
@@ -24,9 +26,9 @@
 }
 
 //TODO
-@media (max-width: 768px) {
-  .signup-form {
-    width: 50%;
-    padding: 15px;
-  }
-}
+// @media (max-width: 768px) {
+//   .signup-form {
+//     width: 50%;
+//     padding: 15px;
+//   }
+// }
