--- a/client/src/styles/forms.scss
+++ b/client/src/styles/forms.scss
@@ -1,53 +1,63 @@
 @import 'variables';
 
 .form-group {
-    margin-bottom: 20px;
-    text-align: left;
-  
-    label {
-      display: block;
-      margin-bottom: 5px;
-      font-weight: bold;
-    }
-  
-    input {
-      width: 100%;
-      padding: 10px;
-      font-size: 16px;
-      border: 1px solid $border-color;
-      border-radius: 10px;
-      box-sizing: border-box;
-      transition: border 0.3s ease;
-      outline: none;
-  
-      &:hover,
-      &.active {
-        border: 1px solid $hover-border-color;
-      }
-    }
-  }
-  
-  button {
+  margin-bottom: 20px;
+  text-align: left;
+
+  label {
     display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+  }
+
+  input {
     width: 100%;
     padding: 10px;
     font-size: 16px;
-    font-family: $primary-font;
-    color: $hover-border-color;
-    background-color: $primary-color;
     border: 1px solid $border-color;
     border-radius: 10px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+    box-sizing: border-box;
+    transition: border 0.3s ease;
     outline: none;
-  
+
+    .file{
+      align-items: center;  
+    }
+
     &:hover,
-    &.active {
-      border: 1px solid $hover-border-color;
+    &:focus {
+      border: 1px solid $hover-border-color !important;
     }
   }
-  
+}
 
-.title-text {
-  text-align: center;
+.button-group {
+  display: flex;
+  justify-content: space-between; 
+  gap: 10px; 
+}
+
+button {
+  padding: 10px;
+  font-size: 16px;
+  background-color: $hover-border-color;
+  color: $primary-color;
+  border: 1px solid $hover-border-color;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  outline: none;
+
+  // &:hover,
+  // &:focus {
+  //   border: 1px solid $hover-border-color !important;
+  // }
+}
+
+.submit-button, .cancel-button {
+  flex: 1; 
+}
+
+.cancel-button {
+  background-color: lighten($primary-color, 10%); 
 }
