--- a/client/src/styles/components/_taskDetails.scss
+++ b/client/src/styles/components/_taskDetails.scss
@@ -80,7 +80,8 @@
         display: flex;
         gap: 20px;
         justify-content: center;
-        margin-top: 20px;
+        // margin-top: 20px;
+        margin-bottom: 10px;
 
         button {
             padding: 10px;
