--- a/client/src/styles/pages/_catalog.scss
+++ b/client/src/styles/pages/_catalog.scss
@@ -3,7 +3,7 @@
 .catalog {
   background-color: $primary-color;
   padding-bottom: 40px;
-  min-height: 100%;
+  min-height: 100vh;
 
   .text {
     background-color: $hover-border-color;
@@ -16,6 +16,10 @@
     h1 {
       padding-bottom: 10px;
     }
+
+    // p {
+    //   text-align: center;
+    // }
   }
   
 
@@ -26,5 +30,14 @@
     padding: 20px;
     margin: 0 auto;
     max-width: 1400px;
+
+    // align-content: center;
+    // justify-items: center;
+    align-items: center;
+
+    // p {
+    //   text-align: center;
+    // }
+
   }
 }
