--- a/client/src/styles/components/_taskCard.scss
+++ b/client/src/styles/components/_taskCard.scss
@@ -17,26 +17,12 @@
   }
 
   img {
-    // old
-    // width: 100%;
-    // width: auto;
-    // max-height: 200px;
-    // object-fit: cover;
-    // border-radius: 10px;
-    // margin-bottom: 10px;
-
     max-width: 260px; 
     height: 200px;
     background-color: $primary-color;
     @include border-radius(10px);
-    // box-shadow: 0px 0px 10px -5px $hover-border-color;
-    // text-align: center;
-    overflow: hidden; // Ensures image doesn't overflow
-    
-    // width: 100%;
-    // height: 100%;
+    overflow: hidden;
     object-fit: cover;
-    // border-radius: 10px;
   }
 
   p {
