--- a/client/src/styles/base/_typography.scss
+++ b/client/src/styles/base/_typography.scss
@@ -8,3 +8,76 @@ h1, h2, h3, h4, h5, h6, p {
     text-align: center;
 }
  
+
+
+@media (max-width: 480px) {
+    h1 {
+        font-size: 24px;
+    }
+
+    h2 {
+        font-size: 22px;
+    }
+
+    h3 {
+        font-size: 18px;
+    }
+
+    p {
+        font-size: 14px;
+    }
+}
+
+@media (min-width: 481px) and (max-width: 768px) {
+    h1 {
+        font-size: 24px;
+    }
+
+    h2 {
+        font-size: 22px;
+    }
+
+    h3 {
+        font-size: 18px;
+    }
+
+    p {
+        font-size: 16px;
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1200px) {
+    h1 {
+        font-size: 24px;
+    }
+
+    h2 {    
+        font-size: 22px;
+    }
+
+    h3 {
+        font-size: 18px;
+    }
+
+    p {
+        font-size: 18px;
+    }
+}
+
+@media (min-width: 1200px) {
+    h1 {
+        font-size: 24px;
+    }
+
+    h2 {
+        font-size: 22px;
+    }
+
+    h3 {
+        font-size: 18px;
+    }
+
+    p {
+        font-size: 17px;
+    }
+}
