--- a/client/src/styles/components/_buttons.scss
+++ b/client/src/styles/components/_buttons.scss
@@ -1,45 +1,41 @@
 @import '../utils/variables';
 @import '../utils/mixins';
 
-button {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    font-family: $primary-font;
-    color: $primary-color;
-    background-color: $hover-border-color;
-    border: 1px solid $border-color;
-    @include border-radius(10px);
-    cursor: pointer;
-    @include transition(background-color, 0.3s, ease);
-    outline: none;
+
+.btns-details {
+  display: flex;
+  flex-direction: row;
+  gap: 1vw;
+  width: 100%;
   
-    &:hover,
-    &.active {
-      border: 1px solid $hover-border-color;
-    }
+  @media (max-width: 768px) {
+    flex-direction: column;
+    gap: 1vw;
   }
-  
-  .not-clickable {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    font-size: 18px;
-    font-family: $primary-font;
-    border-color: none;
-    margin-bottom: 10px;
+}
+
+button {
+  padding-bottom: 10px;
+  flex: 1;
+  padding: 10px;
+  font-size: 16px;
+  font-family: $primary-font;
+  color: $primary-color;
+  background-color: $hover-border-color;
+  @include border-radius(10px);
+  cursor: pointer;
+  @include transition(background-color, 0.3s, ease);
+  outline: none;
+  border: none;
+
+  &.not-clickable {
     cursor: auto;
     color: $hover-border-color;
     background-color: $hover-opacity-black;
-    @include border-radius(10px);
-    @include transition(background-color, 0.3s, ease);
-    outline: none;
-  
-    &:hover {
-      border-color: none !important;
-    }
+    border: none;
   }
+}
+
 
 .create-task-button {
   display: flex;
@@ -76,5 +72,46 @@ button {
     font-size: 1.2em;
     color: $opacity-black;
   }
+
+  @media (max-width: 768px) {
+    padding: 15px;
+    
+    h1 {
+        font-size: 1.8em;
+    }
+
+    h3 {
+        font-size: 1em;
+    }
+  }
+
+  @media (max-width: 480px) {
+      max-width: 200px;
+      padding: 10px;
+      margin: 10px;
+      
+  }
+
 }
-  
+
+.button-group {
+  display: flex;
+  justify-content: space-between; 
+  gap: 10px; 
+}
+
+.form-submit-button {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  font-family: $primary-font;
+  color: $primary-color;
+  background-color: $hover-border-color;
+  @include border-radius(10px);
+  cursor: pointer;
+  @include transition(background-color, 0.3s, ease);
+  outline: none;
+  border: none;
+  text-align: center;
+}
