--- a/client/src/styles/components/_footer.scss
+++ b/client/src/styles/components/_footer.scss
@@ -6,7 +6,18 @@
     display: flex;
     justify-content: center; 
     align-items: center; 
-    width: 100%
+    width: 100%;
+
+    @media (max-width: 768px) {
+      min-height: 50px;
+      padding: 15px;
+    }
+
+    @media (max-width: 480px) {
+        min-height: 60px;
+        padding: 20px;
+    }
+
   }
   
 .text-footer {
