--- a/client/src/styles/components/_taskCard.scss
+++ b/client/src/styles/components/_taskCard.scss
@@ -2,21 +2,26 @@
 @import '../utils/mixins';
 
 .task-card { 
-  width: 100%;
+  // width: 100%;
+  flex: 1 1 calc(33.333% - 40px);
   max-width: 300px;
   padding: 20px;
+  // max-height: 405px;
 
   background-color: $primary-color;
   @include border-radius(10px);
   @include box-shadow($hover-border-color);
   text-align: center;
-  margin: 20px;
+  // margin: 20px;
+
+  box-sizing: border-box;
 
   h3 {
     margin-bottom: 15px;
   }
 
   img {
+    max-width: 100%;
     max-width: 260px; 
     height: 200px;
     background-color: $primary-color;
@@ -31,8 +36,20 @@
 
   a {
     display: inline-block;
-    margin: 5px;
     text-decoration: none;
     color: $primary-color;
+  }
+}
+
+@media (min-width: 769px) {
+  .task-card {
+    flex: 1 1 calc(25% - 40px);
+    max-width: 400px;
+    padding: 30px;
+  }
+
+  .task-card img {
+    max-width: 350px; 
+    height: 250px;
   }
 }
