--- a/client/src/styles/pages/_catalog.scss
+++ b/client/src/styles/pages/_catalog.scss
@@ -10,7 +10,7 @@
     color: $primary-color;
     text-align: center;
     margin-bottom: 20px;
-    height: 80%;
+    // height: 80%;
     padding-top: 55px;
 
     h1 {
@@ -19,13 +19,23 @@
   }
   
 
+
   .task-catalog {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 40px;
+    gap: 20px;
     padding: 20px;
     margin: 0 auto;
     max-width: 1400px;
-    align-items: center;
+
+    justify-items: center;
+
+    
+  }
+
+  @media (max-width: 768px) {
+    grid-template-columns: 1fr;
+    gap: 20px;
+    justify-content: center;
   }
 }
