--- a/client/src/styles/pages/_taskContainer.scss
+++ b/client/src/styles/pages/_taskContainer.scss
@@ -9,7 +9,7 @@
   height: auto;
 
   h2 {
-    margin-top: 5px;
+    margin-top: 20px;
   }
 
   &::-webkit-scrollbar {
@@ -49,12 +49,18 @@
   padding: 20px;
   box-sizing: border-box;
 
+  display: flex;
+  flex-direction: column;
+
+  
+
+
   h3 {
     margin-bottom: 15px;
   }
 
   img {
-    max-width: 260px;
+    // max-width: 260px;
     height: 200px; 
     background-color: $primary-color;
     @include border-radius(10px);
@@ -71,5 +77,42 @@
     margin: 5px;
     text-decoration: none;
     color: $primary-color;
+  }
+}
+
+@media (max-width: 768px) {
+  .task-card {
+    margin: 10px;
+    padding: 10px;
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+@media (max-width: 480px) {
+  .task-card {
+    margin: 5px;
+    padding: 5px;
+  }
+
+  img {
+    max-width: 100%; 
+    height: auto;
+  }
+}
+
+@media (min-width: 769px) {
+  .task-card {
+    flex: 1 1 calc(25% - 40px);
+    max-width: 300px;
+    padding: 30px;
+  }
+
+  .task-card img {
+    max-width: 250px;
+    height: 250px;
   }
 }
