added error mesages for users

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -16,6 +16,10 @@
 @import './styles/components/taskCard';
 @import './styles/components/modal';
 
+
+@import './styles/components/notification';
+
+
 @import './styles/pages/taskContainer';
 @import './styles/pages/taskDetails';
 @import './styles/pages/home';
