--- a/client/src/styles/components/_header.scss
+++ b/client/src/styles/components/_header.scss
@@ -14,7 +14,7 @@
       align-items: center;
       text-decoration: none;
       
-      img {
+      .logo {
         height: 40px; 
         margin-right: 10px; 
       }
@@ -71,4 +71,37 @@
         }
       }
     }
+}
+
+@media (min-width: 1024px) {
+  .header__buttons {
+      .header__menu, .header__button {
+          margin-left: 20px;
+          padding: 10px;
+          font-size: 16px;
+      }
+  }
+
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .header__buttons {
+      .header__menu, .header__button {
+          margin-left: 15px;
+          padding: 8px;
+          font-size: 14px;
+      }
+  }
+
+}
+
+@media (max-width: 767px) {
+  .header__buttons {
+      .header__menu, .header__button {
+          margin-left: 5px;
+          padding: 4px;
+          font-size: 13px;
+      }
+  }
+
 }
