--- a/client/src/styles/pages/_catalog.scss
+++ b/client/src/styles/pages/_catalog.scss
@@ -10,7 +10,6 @@
     color: $primary-color;
     text-align: center;
     margin-bottom: 20px;
-    // height: 80%;
     padding-top: 55px;
 
     h1 {
@@ -18,13 +17,13 @@
     }
   }
   
-
-
   .task-catalog {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 20px;
-    padding: 20px;
+    gap: 40px;
+    padding-bottom: 20px;
+    padding-top: 40px;
+
     margin: 0 auto;
     max-width: 1400px;
 
