--- a/client/src/styles/pages/_taskDetails.scss
+++ b/client/src/styles/pages/_taskDetails.scss
@@ -71,12 +71,24 @@
             display: flex;
             flex-direction: column;
 
+            box-sizing: border-box;
+            max-height: 300px; 
+            overflow: hidden; 
+
+
+            h2,  p{
+                margin: 0;
+                overflow-wrap: break-word;
+                word-break: break-word;
+            }
+            
             h2 {
+                line-height: 1.3;
                 margin-bottom: 10px; 
             }
 
             p {
-                margin: 5px;
+                line-height: 1.2;
             }
 
             .task-actions {
