--- a/client/src/styles/components/_footer.scss
+++ b/client/src/styles/components/_footer.scss
@@ -7,6 +7,8 @@
     justify-content: center; 
     align-items: center; 
     width: 100%;
+    // position: absolute;
+    bottom: 0;
 
     @media (max-width: 768px) {
       min-height: 50px;
@@ -21,5 +23,5 @@
   }
   
 .text-footer {
-    color: $primary-color;
+    color: $primary-color; 
 }
