--- a/client/src/styles/pages/_taskDetails.scss
+++ b/client/src/styles/pages/_taskDetails.scss
@@ -1,9 +1,10 @@
 @import '../utils/variables';
 @import '../utils/mixins';
 
-.page-details {
+.page-details { 
     background-color: $primary-color;
     padding-bottom: 40px;
+    position: relative;
 
     .text {
         background-color: $hover-border-color;
@@ -14,7 +15,7 @@
 
     .task-details {
         background-color: $primary-color;
-        min-height: 40rem;
+        min-height: 100vh;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -63,7 +64,7 @@
             width: 90%;
             max-width: 800px; 
             height: auto; 
-            padding: 2vw; 
+            padding: 20px; 
             background-color: $primary-color;
             @include border-radius(10px);
             @include box-shadow($hover-border-color);
