Refactor taskController and styles
- Added useMemo for optimizing the no-tasks message and current tasks selection in taskController
- Added SCSS class for error styling
- Updated config folder to include views and api.js files

--- a/client/src/styles/utils/_forms.scss
+++ b/client/src/styles/utils/_forms.scss
@@ -29,5 +29,13 @@
     &:focus {
       border: 1px solid $hover-border-color !important;
     }
+
+
   }
+}
+
+.form-input.error,
+.error-message {
+  border: 1px solid #da736b;
+  background-color: rgb(255, 241, 241);
 }
