--- a/client/src/styles/pages/_404.scss
+++ b/client/src/styles/pages/_404.scss
@@ -31,7 +31,7 @@
             text-decoration: none;
             display: block;
             width: 100%;
-            height: 100%;
+            height: 50px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -49,13 +49,14 @@
         
         button {
             width: 150px;
-            height: 35px;
+            height: 5px;
         }
+
     }
 
     @media (min-width: 481px) and (max-width: 768px) {
         height: auto;
-        padding: 30px;
+        padding: 20px;
 
         p {
             padding-top: 100px;
@@ -64,22 +65,23 @@
 
         button {
             width: 180px;
-            height: 37px;
+            height: 25px;
         }
     }
 
     @media (min-width: 769px) {
         height: 55rem;
-        padding: 40px;
-
+        padding: 20px;
+        
         p {
             padding-top: 200px;
             font-size: 18px;
         }
-
+        
         button {
             width: 200px;
             height: 40px;
+            flex:none
         }
     }
 }
