--- a/client/src/styles/pages/_catalog.scss
+++ b/client/src/styles/pages/_catalog.scss
@@ -6,14 +6,18 @@
   min-height: 100vh;
 
   .text {
+    height: 11vh;
     background-color: $hover-border-color;
     color: $primary-color;
     text-align: center;
-    margin-bottom: 20px;
-    padding-top: 55px;
+    justify-content: center;
 
     h1 {
       padding-bottom: 10px;
+    }
+
+    @media (max-width: 768px) {
+      height: 12vh;
     }
   }
   
@@ -28,8 +32,6 @@
     max-width: 1400px;
 
     justify-items: center;
-
-    
   }
 
   @media (max-width: 768px) {
